feature [unit]: Add ThreadDetailScreen unit
- Add ThreadDetailScreen unit
- Add unit - tests
- Add ToolbarView for cell

--- a/Bump.xcodeproj/xcshareddata/xcschemes/Bump.xcscheme
+++ b/Bump.xcodeproj/xcshareddata/xcschemes/Bump.xcscheme
@@ -30,8 +30,7 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4C8338FF2995774700ABDAF2"
